--- a/scss/main.scss
+++ b/scss/main.scss
@@ -87,6 +87,11 @@ header{
     }
 }
 
+.logo{
+    float: none;
+    width: 100px;
+    height: 100px;
+}
 li{
     a{
         text-decoration: none;
