--- a/css/main.css
+++ b/css/main.css
@@ -35,9 +35,9 @@ div .footer__social-icons {
   font-size: smaller; }
 
 /* mi barra de navegacion*/
-* {
-  margin: 0;
-  padding: 0; }
+body {
+  margin: 0px;
+  padding: 0px; }
 
 header {
   width: 100%;
@@ -56,6 +56,9 @@ header {
   float: none;
   width: 100px;
   height: 100px; }
+
+.img-principal {
+  vertical-align: middle; }
 
 li a {
   text-decoration: none;
