--- a/css/main.css
+++ b/css/main.css
@@ -69,5 +69,12 @@ li a {
   flex-wrap: wrap;
   justify-content: space-around; }
 
+.footer__nav-flex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  font-size: 15px; }
+
 .border {
   border: 1px solid black; }
