--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@ $colorCopy: gray;
 $colorBackground: white;
 $colorBorder: black;
 
+
 $paragraph: fuente;
 $size: fontsize;
 
@@ -108,6 +109,14 @@ li{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+.footer__nav-flex{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    font-size: 15px;
 }
 
 
