--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,6 +40,7 @@ ol{
         list-style-type: decimal;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 20px;
+        background-color: rgb(231, 172, 104);
       }
     }
   }
