agregue background como comprar

--- a/css/archivo.css
+++ b/css/archivo.css
@@ -24,7 +24,7 @@ ol.lista li {
         list-style-type: decimal;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 20px;
-        
+        background-color: rgb(231, 172, 104);
         
 
 }
